--- a/style.css
+++ b/style.css
@@ -7,11 +7,9 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
-  background-color: #ddccb3;
-  display: flex;
-  flex-direction: column;
+  background-color: #ddccb3; 
   min-height: 100vh;
-  justify-content: flex-start;
+  
 }
 
 .main-header {
@@ -90,7 +88,7 @@ img {
 main {
   display: flex;
   flex-flow: wrap;
-  flex-direction: column;
+  flex-direction: coloumn;
   justify-content: space-between;
   margin-top: 2%;
   padding: 20px;
@@ -100,50 +98,147 @@ main {
   color: black;
 }
 
-.box1 {
-  flex: 1 0 200px;
+.projects {
+  display: flex;
   flex-direction: column;
-  padding: 5px;
-  text-align: center;
+  flex-flow: wrap;
+  flex-basis: 100%;
   border-style: solid;
   border-width: 1px;
+  justify-content: space-evenly;
+}
+
+#projects1 {
+  justify-content: left;
+  height: 300px;
+  width: 310px;
+  border-radius: 25px;
+  padding: 5px;
+  box-shadow: rgb(66, 66, 66);
+}
+
+.projects img {
+  justify-content: left;
+  height: 135px;
+  width: 240px;
+  border-radius: 25px;
+  padding: 5px;
+  box-shadow: rgb(66, 66, 66);
+}
+
+.projects1 {
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 50px;
+  padding: 10px;
+  box-shadow: 10px 10px 5px #aaaaaa;
+  margin: 20px;
+  justify-content: space-evenly;
+}
+.projects1a {
+  display: flex;
+  padding: 10px;
+  margin: 20px;
+  justify-content: space-evenly;
+}
+
+.projects2 {
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 50px;
+  padding: 20px;
+  flex: 0 0 300px;
+  box-shadow: 10px 10px 5px #aaaaaa;
+  margin: 20px;
+  justify-content: space-evenly;
+}
+
+.work {
+  display: flex;
+  flex-flow: wrap row;
+  justify-content: space-between;
+  margin-top: 10px;
+  margin-bottom: 0;
+  list-style: none;
 }
 
 .box2 {
-  flex: 1 0 200px;
-  flex-direction: column;
   display: flex;
-  justify-content: space-between;
-  padding: 5px;
+  padding: 10px;
   text-align: center;
   border-style: solid;
   border-width: 1px;
 }
 
 .box2a {
-  display: block;
-  flex-direction: row;
-  justify-content: left;
-  flex-basis: 100%;
-  border-style: solid;
-  border-width: 1px;
+  flex: 1;
+  flex-flow: wrap row;
+  justify-content: space-between;
+  text-align: center;
+  padding: 10px;
+  margin-top: 2px;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
-.box2b {
-  display: block;
-  flex-direction:row;
-  justify-content: right;
-  flex-basis: 100%;
-  border-style: solid;
-  border-width: 1px;
+.box2 p {
+  margin: 50px;
 }
 
 .box3 {
-  flex: 1 0 200px;
-  flex-direction: column;
-  padding: 5px;
-  text-align: center;
-  border-style: solid;
+  width: 100%;
+  display: flex;
+  flex-flow: wrap;
+  flex-basis: 100%;
+  border-style: dashed;
   border-width: 1px;
+  flex-direction: column;
+  justify-content: space-around;
+  background: #ddccb3;
+  color: black;
+  padding-right: 20px;
+  padding-left: 20px;
+  text-align: center;
 }
 
+.box3title {
+  justify-content: center;
+}
+
+.box3 h3 {
+  color: black;
+}
+
+.getintouch {
+  list-style: none;
+  padding: 20px;
+  display: inline;
+  justify-content: center;
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 0;
+}
+
+.getintouch li {
+  display: inline;
+  padding: 10px;
+}
+
+.getintouch a {
+  text-decoration: none;
+  color: black;
+  display: inline;
+}
+
+.getintouch h4 {
+  color:black;
+  display:inline;
+}
+
+footer {
+  background: #ddccb3;
+  color: black;
+  text-align: center;
+  font-size: 10px;
+  margin-top: 30px;
+}
